FRI utsettelse - legg til FRI isf siste periode før endring (#4819)
* FRI utsettelse - legg til FRI isf siste periode før endring

* Fikse et par tester