@@ -1,6 +1,7 @@
 package no.nav.foreldrepenger.domene.uttak.uttaksgrunnlag.fp;
 
 import java.time.LocalDate;
+import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
@@ -14,12 +15,15 @@ import no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.periode
 import no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.periode.OppgittPeriodeBuilder;
 import no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.periode.OppgittPeriodeEntitet;
 import no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.periode.UttakPeriodeType;
+import no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.årsak.UtsettelseÅrsak;
 import no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.årsak.Årsak;
 import no.nav.foreldrepenger.behandlingslager.uttak.fp.SamtidigUttaksprosent;
 import no.nav.foreldrepenger.behandlingslager.uttak.fp.UttakResultatEntitet;
+import no.nav.foreldrepenger.behandlingslager.uttak.fp.UttakResultatPeriodeEntitet;
 import no.nav.foreldrepenger.behandlingslager.virksomhet.Arbeidsgiver;
 import no.nav.foreldrepenger.domene.tid.VirkedagUtil;
 import no.nav.foreldrepenger.domene.typer.Stillingsprosent;
+import no.nav.foreldrepenger.regler.uttak.felles.Virkedager;
 import no.nav.fpsak.tidsserie.LocalDateInterval;
 import no.nav.fpsak.tidsserie.LocalDateSegment;
 import no.nav.fpsak.tidsserie.LocalDateTimeline;
@@ -32,6 +36,13 @@ public final class VedtaksperiodeFilter {
     }
 
     public static List<OppgittPeriodeEntitet> filtrerVekkPerioderSomErLikeInnvilgetUttak(Long behandlingId, List<OppgittPeriodeEntitet> nysøknad, UttakResultatEntitet uttakResultatFraForrigeBehandling) {
+        return filtrerVekkPerioderSomErLikeInnvilgetUttak(behandlingId, nysøknad, uttakResultatFraForrigeBehandling, true);
+    }
+
+    public static List<OppgittPeriodeEntitet> filtrerVekkPerioderSomErLikeInnvilgetUttak(Long behandlingId,
+                                                                                         List<OppgittPeriodeEntitet> nysøknad,
+                                                                                         UttakResultatEntitet uttakResultatFraForrigeBehandling,
+                                                                                         boolean kreverSammenhengendeUttak) {
         if (nysøknad.isEmpty() || uttakResultatFraForrigeBehandling == null || uttakResultatFraForrigeBehandling.getGjeldendePerioder().getPerioder().isEmpty()) {
             return nysøknad;
         }
@@ -49,17 +60,36 @@ public final class VedtaksperiodeFilter {
 
         // Alle periodene er like eller eksisterende vedtak har perioder etter ny søknad -> returner seneste periode i søknaden inntil videre.
         if (førsteNyhet == null || førsteNyhet.isAfter(senesteTom)) {
-            var sistePeriodeFraSøknad = nysøknad.stream().max(Comparator.comparing(OppgittPeriodeEntitet::getTom).thenComparing(OppgittPeriodeEntitet::getFom)).orElseThrow();
-            LOG.info("VPERIODER FILTER: behandling {} søkt fom {} kan forkaste alle perioder men returnerer periode med fom {}", behandlingId, tidligsteFom, sistePeriodeFraSøknad.getFom());
-            return List.of(sistePeriodeFraSøknad);
+            if (kreverSammenhengendeUttak) {
+                var sistePeriodeFraSøknad = nysøknad.stream().max(Comparator.comparing(OppgittPeriodeEntitet::getTom).thenComparing(OppgittPeriodeEntitet::getFom)).orElseThrow();
+                LOG.info("VPERIODER FILTER: behandling {} søkt fom {} kan forkaste alle perioder men returnerer periode med fom {}", behandlingId, tidligsteFom, sistePeriodeFraSøknad.getFom());
+                return List.of(sistePeriodeFraSøknad);
+            } else {
+                var friFom = Virkedager.plusVirkedager(senesteTom, 1);
+                var friTom = uttakResultatFraForrigeBehandling.getGjeldendePerioder().getPerioder().stream()
+                    .map(UttakResultatPeriodeEntitet::getTom)
+                    .filter(friFom::isBefore)
+                    .max(Comparator.naturalOrder()).orElse(friFom);
+                LOG.info("VPERIODER FILTER: behandling {} søkt fom {} kan forkaste alle perioder men returnerer FRI fom {}", behandlingId, tidligsteFom, friFom);
+                return List.of(lagFriUtsettelse(friFom, friTom));
+            }
         } else if (nysøknad.stream().map(OppgittPeriodeEntitet::getFom).anyMatch(førsteNyhet::isEqual)) { // Matcher en ny periode, velg fom førsteNyhet
             LOG.info("VPERIODER FILTER: behandling {} søkt fom {} beholder perioder fom {}", behandlingId, tidligsteFom, førsteNyhet);
             return nysøknad.stream().filter(p -> !p.getTom().isBefore(førsteNyhet)).collect(Collectors.toList());
         } else if (nysøknad.stream().noneMatch(p -> p.getTidsperiode().inkluderer(førsteNyhet))) {  // Hull i søknad rundt første nyhet. Ta fom perioden før
-            var sistePeriodeFørHull = nysøknad.stream().filter(p -> !p.getFom().isAfter(førsteNyhet))
-                .max(Comparator.comparing(OppgittPeriodeEntitet::getTom).thenComparing(OppgittPeriodeEntitet::getFom)).orElseThrow();
-            LOG.info("VPERIODER FILTER: behandling {} søkt fom {} hull i søknad beholder perioder fom {}", behandlingId, tidligsteFom, sistePeriodeFørHull.getFom());
-            return nysøknad.stream().filter(p -> !p.getTom().isBefore(sistePeriodeFørHull.getTom())).collect(Collectors.toList());
+            if (kreverSammenhengendeUttak) {
+                var sistePeriodeFørHull = nysøknad.stream().filter(p -> !p.getFom().isAfter(førsteNyhet))
+                    .max(Comparator.comparing(OppgittPeriodeEntitet::getTom).thenComparing(OppgittPeriodeEntitet::getFom)).orElseThrow();
+                LOG.info("VPERIODER FILTER: behandling {} søkt fom {} hull i søknad beholder perioder fom {}", behandlingId, tidligsteFom, sistePeriodeFørHull.getFom());
+                return nysøknad.stream().filter(p -> !p.getTom().isBefore(sistePeriodeFørHull.getTom())).collect(Collectors.toList());
+            } else {
+                var perioderEtterNyhet = new ArrayList<>(nysøknad.stream().filter(p -> p.getFom().isAfter(førsteNyhet)).toList());
+                var førsteFomEtterNyhet = perioderEtterNyhet.stream().map(OppgittPeriodeEntitet::getFom).min(Comparator.naturalOrder()).orElseThrow();
+                var friTom = førsteFomEtterNyhet.minusDays(1);
+                perioderEtterNyhet.add(lagFriUtsettelse(førsteNyhet, friTom));
+                LOG.info("VPERIODER FILTER: behandling {} søkt fom {} hull i søknad legger inn FRI fom {}", behandlingId, tidligsteFom, førsteNyhet);
+                return perioderEtterNyhet;
+            }
         } else { // Må knekke en periode, velg fom førsteNyhet
             LOG.info("VPERIODER FILTER: behandling {} søkt fom {} knekker og beholder perioder fom {}", behandlingId, tidligsteFom, førsteNyhet);
             return velgEvtKnekkPerioderFom(nysøknad, førsteNyhet) ;
@@ -71,6 +101,13 @@ public final class VedtaksperiodeFilter {
             .filter(p -> !p.getTom().isBefore(filterFraOgMed))
             .map(p -> p.getTidsperiode().inkluderer(filterFraOgMed) ? knekkPeriodeReturnerFom(p, filterFraOgMed) : p)
             .toList();
+    }
+
+    private static OppgittPeriodeEntitet lagFriUtsettelse(LocalDate fom, LocalDate tom) {
+        return OppgittPeriodeBuilder.ny()
+            .medPeriode(fom, tom)
+            .medÅrsak(UtsettelseÅrsak.FRI)
+            .build();
     }
 
     private static LocalDate finnTidligsteUlikhetSøknadUttak(List<OppgittPeriodeEntitet> nysøknad, UttakResultatEntitet uttakResultatFraForrigeBehandling) {
